# rules_ios

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  Pods.WORKSPACE  README.md  WORKSPACE  WORKSPACE.bzlmod  a.out  both.h  both.m  both.pch
MixedTest/: BUILD.bazel
MixedTest/ModuleA/: A.swift  B.m
MixedTest/ModuleC/: C.m
MixedTest/ModuleD/: D.swift
MixedTest/TestApp/: MLIAppDelegate.swift
data/: BUILD.bazel  xcspec_evals.bzl  xcspecs.bzl
data_generators/: BUILD.bazel  xcspec_extractor.py
docs/: 2022_bazel_ios_con.md  2023_bazel_ios_con.md  BUILD.bazel  app_clip_doc.md  app_doc.md  apple_patched_doc.md  extension_doc.md  features_doc.md  force_load_direct_deps_doc.md  framework_builder_doc.md  framework_doc.md  hmap_doc.md  import_middleman_doc.md  index_while_building.md  library_doc.md  plist_var_subs_doc.md  plists_doc.md  precompiled_apple_resource_bundle_doc.md  providers_doc.md  static_framework_generator_doc.md  substitute_build_settings_doc.md  test_doc.md  transition_support_doc.md  transitions_and_multi_arch_support.md  vfs_overlay_doc.md  xcconfig_doc.md  xcodeproj_doc.md
example/explicit_module/: BUILD.bazel  main.swift
example/explicit_module/modules/: BUILD.bazel  CarModule.swift  main.swift
examples/mixed-test/: BUILD.bazel  ObjcFile.h  ObjcFile.m  SwiftObj.swift  mixed-test-Bridging-Header.h
ignite/: BUILD.bazel
ignite/Bugsnag/: README.md
ignite/Classes/: IgnitePrueba.h  IgnitePrueba.m
ignite/Classes/action/: IsFeatureAvailable.swift  IsFeatureEnabled.swift  StoreDefaultFlags.swift
ignite/Classes/domain/: FeatureFlag.swift  FeatureFlags.swift
ignite/MLAuthentication/LibraryComponents/: MLAccessTokenEnvelope+MLDictionary.h  MLAccessTokenEnvelope+MLDictionary.m  MLAccessTokenEnvelope.h  MLAccessTokenEnvelope.m  MLAppAuthenticationManager.h  MLAppAuthenticationManager.m  MLAuthenticationByTransactionDelegate.h  MLAuthenticationConnectionFactoryProtocol.h  MLAuthenticationConnectionProtocol.h  MLAuthenticationManager.h  MLAuthenticationManager.m  MLAuthenticationNotificationsNames.h  MLAuthenticationNotificationsNames.m  MLKeychain.h  MLKeychain.m  MLSession+MLDictionary.h  MLSession+MLDictionary.m  MLSession.h  MLSession.m
ignite/MLCommons/: README.md
ignite/MLReachability/: README.md
ignite/MLReachability/LibraryComponents/: MLReachability.h  MLReachability.m
ignite/MLSecurity/: LICENSE  README.md
ignite/TestApp/: Mixedtest-Bridging-Header.h  main.swift
meisel/: BUILD.bazel  a.m  tests.swift
rules/: BUILD.bazel  additional_scheme_info.bzl  app.bzl  app_clip.bzl  apple_library.bzl  apple_library_2.bzl  apple_patched.bzl  extension.bzl  features.bzl  force_load_direct_deps.bzl  framework.bzl  framework_utils.bzl  hmap.bzl  hmapdump.c  hmaptest.c  import_middleman.bzl  internal.bzl  legacy_xcodeproj.bzl  library.bzl  module_extensions.bzl  plists.bzl  plists_test.bzl  precompiled_apple_resource_bundle.bzl  providers.bzl  repositories.bzl  static_framework_generator.bzl  substitute_build_settings.bzl  swift_library.bzl  swift_toolchain.bzl  test.bzl  transition_support.bzl  utils.bzl  vfs_overlay.doc.bzl  xcconfig.doc.bzl  xchammer_xcodeproj.bzl  xcode_sdk_frameworks.bzl  xcodeproj.bzl
rules/analysis_tests/: default_outputs_test.bzl  identical_outputs_test.bzl  transitive_header_test.bzl
rules/apple_platform/: BUILD.bazel
rules/explicit_module/: sdk_clang_module.bzl  sdk_swiftmodule_import.bzl
rules/framework/: BUILD.bazel  framework_packaging.py  merge_vfs_overlay.swift  vfs_aspect.bzl  vfs_overlay.bzl
rules/hmap/: BUILD.bazel  hmap.c  hmap.h  hmapbuild.c  hmapdump.c  lines.c  lines.h
rules/internal/: BUILD.bazel  bazel_version.bzl  framework_middleman.bzl  objc_provider_utils.bzl
rules/pcm/: .bazelrc  BUILD.bazel  apple_framework_pcm.bzl  framework_repos.bzl
rules/rules_apple_api/1_0/: ios_rules.bzl  providers.bzl  version.bzl
rules/rules_apple_api/2_0/: BUILD.bazel  ios_rules.bzl  providers.bzl  version.bzl
rules/rules_apple_api/3_0/: BUILD.bazel  WORKSPACE  ios_rules.bzl  providers.bzl  version.bzl
rules/test/lldb/: BUILD.bazel  bazel_lldb_test_main.py  breakpoint.py  lldb_breakpoint_test_main.py  lldb_sim_runner.py  lldb_test.bzl  lldb_test.py
rules/test/output/: BUILD.bazel  output_checker.sh  output_test.bzl
rules/test/snapshot/: BUILD.bazel  BazelRunfileBridge.h  BazelRunfileBridge.mm  BazelRunfileBundleBridge.h  BazelRunfileBundleBridge.mm  BundleBridge.h  BundleBridge.mm
rules/test_host_app/: BUILD.bazel  Info.plist  ios.entitlements  main.m  test_host_app.bzl
rules/vfs_overlay/: BUILD.bazel  vfs_overlay.bzl  vfs_overlay.py
rules/xcode_autoconf/: BUILD.bazel  Package.swift  xcode_configure.bzl
tests/app/ios/: BUILD.bazel
tests/app/ios/App/: main.m
tests/swift_version/: BUILD.bazel  empty.swift
tests/xcconfig/: BUILD.bazel  tests.bzl  weak_property.m
tests/xcodeproj/: BUILD.bazel  build.sh  test.swift  tests.sh
tests/xcodeproj/Single-Application-Project-AllTargets.xcodeproj/: project.pbxproj
tests/xcodeproj/Single-Application-Project-DirectTargetsOnly.xcodeproj/: project.pbxproj
tests/xcodeproj/Single-Application-Project.xcodeproj/: project.pbxproj
tests/xcodeproj/Single-Application.xcodeproj/: project.pbxproj
tools/: BUILD.bazel  compile_only_aspect.bzl
tools/m1_utils/: BUILD.bazel  arm64-to-sim  update_dynamic.sh  update_in_place.sh  update_static.sh
tools/static_framework_generator/: BUILD.bazel  installer.sh
tools/tests/: prepare_sim.py
tools/vmd/: BUILD.bazel  ios_vm_test_runner.sh  ios_vm_test_runner.template.sh  ssh_pass.c  vm_run.sh  vm_test_runner.bzl  vmd.sh
tools/xcode_version_computation/: BUILD.bazel  main.swift
tools/xcodeproj-shims/: BUILD.bazel  clang-stub.sh  install.sh  json-util.sh  ld-stub.sh  swiftc-stub.sh  xcodeproj-installer.sh
tools/xcodeproj_shims/: BUILD.bazel  build-wrapper.sh  install.sh  ld-stub.sh  output-processor.rb  print_json_leaf_nodes.py  swiftc-stub.sh  xcodeproj-installer.sh
tools/xctest_absolute_source_locations/: BUILD.bazel  xctest_absolute_source_locations.m
(+822 files in other folders)
