py_binary(
    name = "xcspec_extractor",
    srcs = ["xcspec_extractor.py"],
    srcs_version = "PY3",
)

genrule(
    name = "extract_xcspecs",
    outs = ["extract_xcspecs.sh"],
    cmd = """set -eu
cat <<EOS > $(OUTS)
set -euo pipefail
# xcode-locator prints json with keys as version names and values as paths to the developer dir for that xcode version
readonly xcode_version=\\$$(xcodebuild -version | head -n1 | sed "s/Xcode //")
readonly developer_dir=\\$$(xcode-select -p)
$(location :xcspec_extractor) \\$$developer_dir \\$$xcode_version \\$${BUILD_WORKSPACE_DIRECTORY}/data/xcspecs.bzl \\$${BUILD_WORKSPACE_DIRECTORY}/data/xcspec_evals.bzl
EOS
    """,
    executable = True,
    tags = ["manual"],
    tools = [
        ":xcspec_extractor",
    ],
)
