load("@build_bazel_rules_ios//rules:app.bzl", "ios_application")


load("//rules:library.bzl", "apple_library")
  

apple_library(
    name = "Ignite",
    srcs = glob([
        "Classes/**/*.swift",
        "Classes/**/*.m",
        "Classes/**/*.h",
    ]),
    visibility = ["//visibility:public"]
)


ios_application(
    name = "Mixedtest",
    srcs = glob([
        "TestApp/**/*.swift",
        "TestApp/**/*.m",
        "TestApp/**/*.h",
    ]),
    bundle_id = "com.example.mixed-app",
    families = [
        "iphone",
    ],
    deps = [":Ignite_swift", ":Ignite_objc"],
    minimum_os_version = "12.0",
)