load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework_packaging")
load("@build_bazel_rules_ios//rules:app.bzl", "ios_application")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

ios_application(
    name = "MyApp",
    srcs = ["a.m", "a.swift", "bridge.h", "dir/header.h"],
    bundle_id = "com.example.ios-app",
    swift_objc_bridging_header = "bridge.h",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "12.0",
    visibility = ["//visibility:public"],
    deps = [
    ]
)

apple_framework_packaging(
    name = "MyApp_framework_unlinked",
    framework_name = "MyApp",
    platforms = {
        "ios": "12.0",
    },
    skip_packaging = ["binary"],
    tags = [
        "manual",
    ],
    transitive_deps = [],
    visibility = ["//visibility:public"],
    deps = [
        ":MyApp_objc",
        ":MyApp_swift",
    ],
)

ios_unit_test(
    name = "MyAppTests",
    srcs = ["tests.swift"],
    minimum_os_version = "12.0",
    sdk_frameworks = ["XCTest"],
    deps = ["MyApp_framework_unlinked"],
)
