load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

genrule(
    name = "empty",
    outs = ["empty.swift"],
    cmd = "touch $(OUTS)",
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "transition_support",
    srcs = ["transition_support.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bzl_srcs"],
)

bzl_library(
    name = "hmap",
    srcs = ["hmap.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@build_bazel_rules_swift//swift"],
)

bzl_library(
    name = "features",
    srcs = ["features.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "substitute_build_settings",
    srcs = ["substitute_build_settings.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "xcconfig.doc",
    srcs = ["xcconfig.doc.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["bzl_srcs"],
)

bzl_library(
    name = "plists",
    srcs = ["plists.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bzl_srcs"],
)

bzl_library(
    name = "vfs_overlay.doc",
    srcs = ["vfs_overlay.doc.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["//rules/framework:vfs_overlay"],
)

bzl_library(
    name = "precompiled_apple_resource_bundle",
    srcs = ["precompiled_apple_resource_bundle.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        ":bzl_srcs",
    ],
)

bzl_library(
    name = "library",
    srcs = ["library.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bzl_srcs"],
)

bzl_library(
    name = "framework",
    srcs = ["framework.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bzl_srcs"],
)

bzl_library(
    name = "apple_patched",
    srcs = ["apple_patched.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bzl_srcs"],
)

bzl_library(
    name = "app_clip",
    srcs = ["app_clip.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bzl_srcs"],
)

bzl_library(
    name = "app",
    srcs = ["app.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bzl_srcs"],
)

bzl_library(
    name = "extension",
    srcs = ["extension.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bzl_srcs"],
)

# A library for all of the bzl_srcs, to satisfy `stardoc`'s deps attribute.
bzl_library(
    name = "bzl_srcs",
    srcs = glob([
        "*.bzl",
        "internal/*.bzl",
    ]),
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//data:xcspecs",
        "//rules/framework:vfs_overlay",
        "//rules/library:bzl_srcs",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:selects",
        "@bazel_skylib//lib:sets",
        "@bazel_skylib//lib:types",
        "@bazel_skylib//rules:write_file",
        "@build_bazel_rules_apple//apple",
        "@build_bazel_rules_apple//apple:apple_static_library",
        "@build_bazel_rules_apple//apple:ios",
        "@build_bazel_rules_apple//apple:resources",
        "@build_bazel_rules_swift//swift",
        "@rules_apple_api//:api",
    ],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":bzl_srcs"],
)
